<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/splashtext"
        android:elevation="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="250dp">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hometext"
        android:gravity="left"
        android:elevation="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="40sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="      to SportMatch!"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="30sp"/>
    </LinearLayout>


    <!---BOTTONS-->

    <LinearLayout
        android:id="@+id/bottons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        android:layout_marginTop="210dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/logoMain"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo"
                    app:shapeAppearanceOverlay="@style/roundImageView"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/textlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login to Your Account!"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="23sp"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/logoMain" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="170dp"
                    android:layout_height="65dp"
                    android:backgroundTint="@color/verde5"
                    android:text="Sign in"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textlogin" />

                <TextView
                    android:id="@+id/Or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button_login"
                    android:text="-----------------------------------OR-----------------------------------"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textSize="11sp"/>

                <TextView
                    android:id="@+id/newhere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Or"
                    android:text="New Here?"
                    android:fontFamily="sans-serif-medium"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textSize="23sp"/>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/newhere"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/register_text"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:textSize="11sp"/>

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="170dp"
                    android:layout_height="65dp"
                    android:backgroundTint="@color/verde5"
                    android:text="Register"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/desc" />

                <TextView
                    android:id="@+id/Or2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button_register"
                    android:text="-----------------------OR CONTINUE WITH-----------------------"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textSize="11sp"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/googleLogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/googlelogo"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/Or2"
                    app:shapeAppearanceOverlay="@style/roundImageView"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>



        </LinearLayout>


    </LinearLayout>



    <ImageView
        android:id="@+id/backG"
        android:layout_width="700dp"
        android:layout_height="1100dp"
        android:src="@drawable/backg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        app:flow_horizontalBias="0.923"/>


</androidx.constraintlayout.widget.ConstraintLayout>