...
                android:layout_below="@id/Login"
                android:layout_marginTop="30dp"
                android:textSize="22sp"
                android:hint="Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_main_usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:height="60dp"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="text" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="Password"
                android:textSize="22sp" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_main_passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:height="60dp"
                    android:inputType="textPassword" />

...
